; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_get_user_groups.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_get_user_groups.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.user_groups* }
%struct.user_groups = type { i32, i32 }

@R_cnt = common dso_local global i32 0, align 4
@MAX_USERS = common dso_local global i32 0, align 4
@R = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_user_groups(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.user_groups*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.TYPE_3__* @get_user(i32 %7)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %4, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = icmp ne %struct.TYPE_3__* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct.user_groups*, %struct.user_groups** %13, align 8
  %15 = icmp ne %struct.user_groups* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %11, %1
  store i32 0, i32* @R_cnt, align 4
  store i32 0, i32* %2, align 4
  br label %41

17:                                               ; preds = %11
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load %struct.user_groups*, %struct.user_groups** %19, align 8
  store %struct.user_groups* %20, %struct.user_groups** %5, align 8
  %21 = load %struct.user_groups*, %struct.user_groups** %5, align 8
  %22 = getelementptr inbounds %struct.user_groups, %struct.user_groups* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @MAX_USERS, align 4
  %26 = icmp sgt i32 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %17
  %28 = load i32, i32* @MAX_USERS, align 4
  br label %31

29:                                               ; preds = %17
  %30 = load i32, i32* %6, align 4
  br label %31

31:                                               ; preds = %29, %27
  %32 = phi i32 [ %28, %27 ], [ %30, %29 ]
  store i32 %32, i32* @R_cnt, align 4
  %33 = load i32, i32* @R, align 4
  %34 = load %struct.user_groups*, %struct.user_groups** %5, align 8
  %35 = getelementptr inbounds %struct.user_groups, %struct.user_groups* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @R_cnt, align 4
  %38 = mul nsw i32 %37, 4
  %39 = call i32 @memcpy(i32 %33, i32 %36, i32 %38)
  %40 = load i32, i32* %6, align 4
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %31, %16
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}

declare dso_local %struct.TYPE_3__* @get_user(i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
